// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeNotice should match snapshot 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                auditPlan.subscribeNotice.title
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <form
                    class="ant-form ant-form-horizontal"
                  >
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-required"
                            for="interval"
                            title=""
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <span
                                  aria-label="info-circle"
                                  class="anticon anticon-info-circle text-orange"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="info-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                auditPlan.subscribeNotice.form.interval
                              </div>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-input-number ant-input-number-in-form-item"
                              >
                                <div
                                  class="ant-input-number-handler-wrap"
                                >
                                  <span
                                    aria-disabled="false"
                                    aria-label="Increase Value"
                                    class="ant-input-number-handler ant-input-number-handler-up"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      aria-label="up"
                                      class="anticon anticon-up ant-input-number-handler-up-inner"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="up"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <span
                                    aria-disabled="false"
                                    aria-label="Decrease Value"
                                    class="ant-input-number-handler ant-input-number-handler-down"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      aria-label="down"
                                      class="anticon anticon-down ant-input-number-handler-down-inner"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="down"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="ant-input-number-input-wrap"
                                >
                                  <input
                                    aria-required="true"
                                    aria-valuemax="99999"
                                    aria-valuemin="0"
                                    aria-valuenow="10"
                                    autocomplete="off"
                                    class="ant-input-number-input"
                                    id="interval"
                                    role="spinbutton"
                                    step="1"
                                    value="10"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-required"
                            for="level"
                            title=""
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <span
                                  aria-label="info-circle"
                                  class="anticon anticon-info-circle text-orange"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="info-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                auditPlan.subscribeNotice.form.level
                              </div>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="level_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="level_list"
                                      aria-haspopup="listbox"
                                      aria-owns="level_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="level"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-placeholder"
                                  />
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class=""
                            for="emailEnable"
                            title=""
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <span
                                  aria-label="info-circle"
                                  class="anticon anticon-info-circle text-orange"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="info-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                auditPlan.subscribeNotice.form.emailEnable
                              </div>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch"
                                id="emailEnable"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class=""
                            for="webhooksEnable"
                            title="auditPlan.subscribeNotice.form.webhooksEnable"
                          >
                            auditPlan.subscribeNotice.form.webhooksEnable
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch"
                                id="webhooksEnable"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class=""
                            title="auditPlan.subscribeNotice.form.webhooksEnable"
                          >
                            auditPlan.subscribeNotice.form.webhooksEnable
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              auditPlan.subscribeNotice.form.webhooksEnableCe
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                      style="margin-top: 10px;"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-no-colon"
                            title=" "
                          >
                             
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                class="ant-btn ant-btn-default"
                                data-testid="testMessage"
                                type="button"
                              >
                                <span>
                                  auditPlan.subscribeNotice.form.test
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  common.close
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  common.submit
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SubscribeNotice should match snapshot 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                auditPlan.subscribeNotice.title
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div>
                  <div
                    aria-busy="true"
                    aria-live="polite"
                    class="ant-spin ant-spin-spinning"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="ant-spin-container ant-spin-blur"
                >
                  <form
                    class="ant-form ant-form-horizontal"
                  >
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-required"
                            for="interval"
                            title=""
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <span
                                  aria-label="info-circle"
                                  class="anticon anticon-info-circle text-orange"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="info-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                auditPlan.subscribeNotice.form.interval
                              </div>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-input-number ant-input-number-in-form-item ant-input-number-status-success"
                              >
                                <div
                                  class="ant-input-number-handler-wrap"
                                >
                                  <span
                                    aria-disabled="false"
                                    aria-label="Increase Value"
                                    class="ant-input-number-handler ant-input-number-handler-up"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      aria-label="up"
                                      class="anticon anticon-up ant-input-number-handler-up-inner"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="up"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <span
                                    aria-disabled="false"
                                    aria-label="Decrease Value"
                                    class="ant-input-number-handler ant-input-number-handler-down"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      aria-label="down"
                                      class="anticon anticon-down ant-input-number-handler-down-inner"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="down"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="ant-input-number-input-wrap"
                                >
                                  <input
                                    aria-required="true"
                                    aria-valuemax="99999"
                                    aria-valuemin="0"
                                    aria-valuenow="6"
                                    autocomplete="off"
                                    class="ant-input-number-input"
                                    id="interval"
                                    role="spinbutton"
                                    step="1"
                                    value="6"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-required"
                            for="level"
                            title=""
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <span
                                  aria-label="info-circle"
                                  class="anticon anticon-info-circle text-orange"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="info-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                auditPlan.subscribeNotice.form.level
                              </div>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item ant-select-status-success ant-select-single ant-select-show-arrow"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="level_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="level_list"
                                      aria-haspopup="listbox"
                                      aria-owns="level_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="level"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-item"
                                    title="ruleTemplate.ruleLevel.error"
                                  >
                                    ruleTemplate.ruleLevel.error
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class=""
                            for="emailEnable"
                            title=""
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <span
                                  aria-label="info-circle"
                                  class="anticon anticon-info-circle text-orange"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="info-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                auditPlan.subscribeNotice.form.emailEnable
                              </div>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="true"
                                class="ant-switch ant-switch-checked"
                                id="emailEnable"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class=""
                            for="webhooksEnable"
                            title="auditPlan.subscribeNotice.form.webhooksEnable"
                          >
                            auditPlan.subscribeNotice.form.webhooksEnable
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="true"
                                class="ant-switch ant-switch-checked"
                                id="webhooksEnable"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-required"
                            for="webhooksUrl"
                            title="auditPlan.subscribeNotice.form.webhooksUrl"
                          >
                            auditPlan.subscribeNotice.form.webhooksUrl
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input"
                                id="webhooksUrl"
                                type="text"
                                value="prospero://kdmgujzl.tw/kgkredqxr"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item ant-form-item-with-help"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-required"
                            for="template"
                            title="auditPlan.subscribeNotice.form.webhooksTemplate"
                          >
                            auditPlan.subscribeNotice.form.webhooksTemplate
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control editor-test ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-describedby="template_help"
                                aria-required="true"
                                height="200"
                                id="template"
                                language="json"
                                options="[object Object]"
                                theme="vs"
                                value="{
            \\"msg_type\\": \\"text2\\",
            \\"bbb\\": {
               \\"aaa\\":\\"{{.subject}} \\\\n {{.body}}\\"
            }
          }"
                                width="100%"
                              />
                            </div>
                          </div>
                          <div
                            style="display: flex; flex-wrap: nowrap;"
                          >
                            <div
                              class="ant-form-item-explain ant-form-item-explain-connected"
                              id="template_help"
                              role="alert"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="ant-alert ant-alert-warning ant-alert-no-icon"
                                  data-show="true"
                                  role="alert"
                                >
                                  <div
                                    class="ant-alert-content"
                                  >
                                    <div
                                      class="ant-alert-message"
                                    >
                                      <span
                                        class="ant-typography"
                                      >
                                        auditPlan.subscribeNotice.form.webhooksTemplateHelp.title
                                        <ul
                                          class="clear-margin-bottom"
                                        >
                                          <li>
                                            auditPlan.subscribeNotice.form.webhooksTemplateHelp.rule1
                                          </li>
                                          <li>
                                            auditPlan.subscribeNotice.form.webhooksTemplateHelp.rule2
                                          </li>
                                          <li>
                                            <a
                                              class="ant-typography"
                                            >
                                              auditPlan.subscribeNotice.form.webhooksTemplateHelp.reset
                                            </a>
                                          </li>
                                        </ul>
                                        auditPlan.subscribeNotice.form.webhooksTemplateHelp.supportVariable
                                        <div
                                          class="ant-table-wrapper"
                                        >
                                          <div
                                            class="ant-spin-nested-loading"
                                          >
                                            <div
                                              class="ant-spin-container"
                                            >
                                              <div
                                                class="ant-table ant-table-small"
                                              >
                                                <div
                                                  class="ant-table-container"
                                                >
                                                  <div
                                                    class="ant-table-content"
                                                  >
                                                    <table
                                                      style="table-layout: auto;"
                                                    >
                                                      <colgroup />
                                                      <thead
                                                        class="ant-table-thead"
                                                      >
                                                        <tr>
                                                          <th
                                                            class="ant-table-cell"
                                                          >
                                                            auditPlan.subscribeNotice.form.webhooksTemplateHelp.table.desc
                                                          </th>
                                                          <th
                                                            class="ant-table-cell"
                                                          >
                                                            auditPlan.subscribeNotice.form.webhooksTemplateHelp.table.variable
                                                          </th>
                                                        </tr>
                                                      </thead>
                                                      <tbody
                                                        class="ant-table-tbody"
                                                      >
                                                        <tr
                                                          class="ant-table-row ant-table-row-level-0"
                                                          data-row-key="auditPlan.subscribeNotice.form.webhooksTemplateHelp.variable.subject"
                                                        >
                                                          <td
                                                            class="ant-table-cell"
                                                          >
                                                            auditPlan.subscribeNotice.form.webhooksTemplateHelp.variable.subject
                                                          </td>
                                                          <td
                                                            class="ant-table-cell"
                                                          >
                                                            {{.subject}}
                                                          </td>
                                                        </tr>
                                                        <tr
                                                          class="ant-table-row ant-table-row-level-0"
                                                          data-row-key="auditPlan.subscribeNotice.form.webhooksTemplateHelp.variable.body"
                                                        >
                                                          <td
                                                            class="ant-table-cell"
                                                          >
                                                            auditPlan.subscribeNotice.form.webhooksTemplateHelp.variable.body
                                                          </td>
                                                          <td
                                                            class="ant-table-cell"
                                                          >
                                                            {{.body}}
                                                          </td>
                                                        </tr>
                                                      </tbody>
                                                    </table>
                                                  </div>
                                                </div>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class=""
                            title="auditPlan.subscribeNotice.form.webhooksEnable"
                          >
                            auditPlan.subscribeNotice.form.webhooksEnable
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              auditPlan.subscribeNotice.form.webhooksEnableCe
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                      style="margin-top: 10px;"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                        >
                          <label
                            class="ant-form-item-no-colon"
                            title=" "
                          >
                             
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                class="ant-btn ant-btn-default"
                                data-testid="testMessage"
                                type="button"
                              >
                                <span>
                                  auditPlan.subscribeNotice.form.test
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  common.close
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  common.submit
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
